--- a/Volatility/VolatilityWPFApp/VolatilityWPFApp.csproj
+++ b/Volatility/VolatilityWPFApp/VolatilityWPFApp.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -49,6 +50,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="VolatilityContracts, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\VolatilityContracts.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -112,12 +117,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\VolatilityContracts\VolatilityContracts.csproj">
-      <Project>{0106cd37-3e50-4dc5-acee-874d451f0169}</Project>
-      <Name>VolatilityContracts</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="08-saturn_98601.png" />
