Completed all service operations.

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,6 @@ Volatility/VolatilityWCFService/bin/Debug/Customers.json
 Volatility/VolatilityWCFService/bin/Debug/Newtonsoft.Json.dll
 Volatility/VolatilityWCFService/bin/Debug/Newtonsoft.Json.xml
 Volatility/VolatilityWCFService/packages/Newtonsoft.Json.13.0.1/.signature.p7s
+Volatility/VolatilityWPFApp/.vs/VolatilityWPFApp_single/v16/.suo
+Volatility/VolatilityWPFApp/.vs/VolatilityWPFApp_single/v16/.suo
+Volatility/VolatilityWPFApp/.vs/VolatilityWPFApp_single/v16/.suo
