Refresh after delete and new.

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,4 @@ Volatility/VolatilityWCFService/packages/Newtonsoft.Json.13.0.1/.signature.p7s
 Volatility/VolatilityWPFApp/.vs/VolatilityWPFApp_single/v16/.suo
 Volatility/VolatilityWPFApp/.vs/VolatilityWPFApp_single/v16/.suo
 Volatility/VolatilityWPFApp/.vs/VolatilityWPFApp_single/v16/.suo
+Volatility/VolatilityWPFApp/.vs/VolatilityWPFApp_single/v16/.suo
