Service session manager  save enhancement and close context on client.

--- a/Volatility/VolatilityWCFService/App.config
+++ b/Volatility/VolatilityWCFService/App.config
@@ -5,5 +5,8 @@
     </startup>
   <appSettings>
     <add key="DataFile" value="Customers.json" />
+    <add key="BaseUri" value="net.pipe://localhost" />
+    <add key="EndPoint" value="MyAddress" />
+    <add key="SaveDataIntervalSeconds" value="30" />
   </appSettings>
 </configuration>
