--- a/Volatility/VolatilityWPFApp/App.config
+++ b/Volatility/VolatilityWPFApp/App.config
@@ -5,5 +5,6 @@
     </startup>
   <appSettings>
       <add key="MockData" value="Customers.json" />
+      <add key="ServiceEndPoint" value="net.pipe://localhost/MyAddress" />
   </appSettings>
 </configuration>
