Main window implements callback itself.

--- a/Volatility/VolatilityWPFApp/App.config
+++ b/Volatility/VolatilityWPFApp/App.config
@@ -6,5 +6,6 @@
   <appSettings>
       <add key="MockData" value="Customers.json" />
       <add key="ServiceEndPoint" value="net.pipe://localhost/MyAddress" />
+      <add key="ConnectThresholdSeconds" value="2" />
   </appSettings>
 </configuration>
