Use Task instead of direct ThreadPool

--- a/Volatility/VolatilityWPFApp/VolatilityWPFApp.csproj
+++ b/Volatility/VolatilityWPFApp/VolatilityWPFApp.csproj
@@ -123,8 +123,6 @@
   <ItemGroup>
     <Resource Include="small.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Service\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
