Added basic validation rule and applied it on first/last name and contact number.

--- a/Volatility/VolatilityWPFApp/VolatilityWPFApp.csproj
+++ b/Volatility/VolatilityWPFApp/VolatilityWPFApp.csproj
@@ -71,6 +71,7 @@
       <DependentUpon>CustomerDetailsWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="NotificationInfo.cs" />
+    <Compile Include="ValidationRules\NonEmptyValidationRule.cs" />
     <Compile Include="ViewModels\GenderView.cs" />
     <Compile Include="ViewModels\TitleView.cs" />
     <Compile Include="Extensions\Extensions.cs" />
